# Chamber-Danger

./: .coverage  .gitignore  .tasks.py.swp  README.md  pyproject.toml  tasks.py
documentation/: .coverage  Untitled Diagram.drawio  final_report.md  implementation_document.md  implentation_document.md  project_specifications.md  testing_document.md  user_guide.md  week_1_report.md  week_2_report.md  week_3_report.md  week_4_report.md  week_5_report.md  week_6_report.md
src/: .coverage  dungeon.py  generate_dungeon.py  performance_BSPDungeon.py  performance_OrganicBSPDungeon.py  room.py
src/entities/: chamber.py  corridor.py  node.py
src/performance_tests/: perfomance_BSPDungeon.py  performance_BSPDungeon.py  performance_OrganicBSPDungeon.py
src/services/: BSPDungeon.py  OrganicBSPDungeon.py  chamber.py  dungeon.py  node.py  room.py  ui_service.py
src/tests/: BPSDungeon_test.py  OrganicBSPDungeon_test.py  chamber_test.py  dungeon_test.py  node_test.py  room_test.py  ui_service_test.py
src/tests/performance_tests/: performance_OrganicBSPDungeon.py
src/ui/: draw_dungeon.py  draw_dungeon2.py  dungeon_drawer.py  main_ui.py  menu.py  renderer.py  text_holder.py  tick_box.py
src/ui/ui_entities/: button.py  size_line.py  text.py  tick_box.py
