[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["alexander <ale.engelhardt@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.1"
pylint = "^2.14.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.2"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
